fix flex wrapping on title bars

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@ a, a:visited {
     margin-top: 0;
     padding-top: 0;
     margin-bottom: 1rem;
+    flex-wrap: wrap;
 }
 
 .boxed-button {
